test/runtime-integration-tests/TestPrograms/Syntax/Invalid/unused_keywords_errors.5th
main(): int {
	map; interface; struct; type; package; for; switch; select; defer; go; goto; range; const; var; break; continue; fallthrough; default; case;
	return 0;
}
